<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/defaut_background_color"
        android:scaleType="center"
        android:contentDescription="@string/登录界面背景"
        />
    <LinearLayout
        android:id="@+id/line1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bai_di_button"
        >
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/邮箱" />

        <TextView
            android:id="@+id/edit1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/请输入邮箱" />

    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/line1"
        android:layout_below="@id/line1"
        android:onClick="zc_sendemail"
        android:background="@drawable/lan_di_button"
        android:text="@string/发送验证码"
        />
    <LinearLayout
        android:id="@+id/line2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bai_di_button"
        >
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/密码" />

        <EditText
            android:id="@+id/edit2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:hint="@string/请输入密码"
            android:autofillHints="" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/line3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bai_di_button"
        >
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/密码" />

        <EditText
            android:id="@+id/edit3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:hint="@string/确认密码"
            android:autofillHints="" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/line4"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/line3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bai_di_button"
        >
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/邮箱验证码" />

        <EditText
            android:id="@+id/edit4"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/请输入验证码"
            android:autofillHints="" />

    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/lan_di_button"
        android:layout_marginTop="20dp"
        android:layout_below="@id/line4"
        android:onClick="zc_zhuce"
        android:text="@string/点击保存"/>

</RelativeLayout>