<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/GetWifi_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="wifi_ssid"
        android:hint="@string/请输入与设备共享的WiFi名"
        android:inputType="text" />

    <EditText
        android:id="@+id/GetWifi_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="wifi_password"
        android:hint="@string/WiFi密码"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="GetWifi_button_ok"
        android:text="@string/发送" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/设备连接WiFi提醒"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/TextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/text_bottom"
        >

        <TextView
            android:id="@+id/GetWifi_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/TextView"
            />
    </ScrollView>

</LinearLayout>