<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/defaut_background_color"
            android:contentDescription="@string/用户信息界面背景"
            android:scaleType="center" />

        <ImageView
            android:id="@+id/logdata_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/头像图片"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/logdata_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logdata_image"
            android:layout_marginTop="30dp"
            android:background="@drawable/bai_di_button"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/昵称"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/logdata_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:hint="@string/昵称"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/邮箱"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/logdata_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="end"
                    android:hint="@string/邮箱"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/性别"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/logdata_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="end"
                    android:hint="@string/性别"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/perm_group_system_tools1"
        android:contentDescription="@string/设置" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>