<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EquipmentShowOldDateActivity">

        <LinearLayout
            android:id="@+id/ShowOldDate_line1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ShowOldDate_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/defaut_background_color">

                <TextView
                    android:id="@+id/textView_mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:text="@string/选择模式"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:text="@string/ZuiXiaoRiQi"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:text="@string/ZuiDaRiQI"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:text="@string/其他"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ShowOldDate_line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle"
                android:background="@drawable/defaut_background_color">

                <Button
                    android:id="@+id/button_mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/选择模式"
                    android:textColor="@color/黑色"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="#000000ff"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_min_"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ZuiXiaoRiQi"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="#000000ff"
                    android:textColor="@color/黑色"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_max_"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ZuiDaRiQI"
                    android:textColor="@color/黑色"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="#000000ff"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/黑色"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="#000000ff"
                    android:text="@string/其他"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.example.mytabs.DrawOldDateView
                android:id="@+id/draw_old_date_View"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000ff"
                android:scrollbars="vertical" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/蓝底"
                android:contentDescription="@string/登录界面背景"
                android:scaleType="center" />
        </LinearLayout>

        <com.example.mytabs.MyFloatingActionButton
            android:id="@+id/draw_old_date_fab_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/刷新"
            android:src="@drawable/ic_perm_group_sync_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>